# safemath

./: .coverage  .gitignore  README.md  check.py  debug_numpy.py  debug_pandas.py  pyproject.toml  quicktest.py  safemath_edge_case_test_20250807_010211.txt  safemath_verified_test_20250807_010923.txt  setup.py
safemath/: __init__.py  cli.py  config.py  core.py  numpy_utils.py  pandas_utils.py  safenumber.py
safemath.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_core.py  test_numpy.py  test_pandas.py  test_safenumber.py
